[package]
name = "polyield_vault"
version = "0.1.0"
description = "PolyYield USDC Vault Program for prediction market deposits"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "polyield_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"